--- a/src/components/chart/ChartBar.css
+++ b/src/components/chart/ChartBar.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
 }
+
 .chart-bar__inner {
   height: 100%;
   width: 100%;
@@ -15,13 +16,16 @@
   flex-direction: column;
   justify-content: flex-end;
 }
+
 .chart-bar__fill {
   background-color: #4826b9;
   width: 100%;
   transition: all 0.3s ease-out;
 }
+
 .chart-bar__label {
   font-weight: bold;
-  font-size: 0.5rem;
+  font-size: 0.8rem;
   text-align: center;
+  margin-top: 0.4rem;
 }
